# olt-switchsw

./: README  build_dir  create_package.sh  fastpath.build  fastpath.releasenotes  local_manager.sh  repo_setup.sh
RELEASE_610_FP_6.1.0.5-FastPath-Ent-esw-xgs3-bmw-LR-CSxw-IQH/: bcm56580_update.tgz  make_configure
andl/dapi/: dapi_debug.h
builds/: buildFpAllInOne_bg  build_fastpath.sh  fastpath-cxo160g.rootfs  fastpath-cxo360g.build  fastpath-cxo640g.build  fastpath-olt.build  fastpath-olt1t0.build  fastpath-olt1t0f.build  fastpath-olt1t0f.rootfs  fastpath-olt1t1.build  fastpath-olt1t3.build  fastpath-tg16g.build  fastpath.build  fastpath.releasenotes  fp.releasenotes  fp.releasenotes.txt  mkboards_update.sh  mksetup  readme.txt  save_src.sh  swdrv.build  transfer_build.sh
builds/equipment/: fastpath  fastpath.backup  fastpath.debugintercept.sh  fastpath.insmods.sh  rcS_ptin
builds/util/: mkbuild  setup_olt7-8ch.sh  setup_olt7-8ch_fw.sh
fastpath/: .gitignore  Makefile  Makefiles.changed  all.update  build.sh  cxo160g.make  cxo640g-e500mc.make  cxo640g.make  cxo640g.update  cxo640g_v1.install  cxo640g_v1.make  cxp360g-e500mc.make  cxp360g.install  cxp360g.make  cxp360g.update  fastpath.releasenotes  img_cxo640g  mgmd_compile.sh  mgmd_config_TA48GE.sh  mgmd_update.sh  mkboards_update.sh  olt1t0.install  olt1t1.make  olt1t3.make  olt360.make  olt640.make  olt7-8ch.make  olt7-8chb.make  rmake.sh  swdrvr-cxo160g.make  swdrvr-cxp360g.install  swdrvr-cxp360g.make  swdrvr-olt1t0.make  swdrvr-olt1t0f.make  swdrvr-ta48ge.install  swdrvr-ta48ge.make  swdrvr-tg16g.install  swdrvr-tg4g.install  swdrvr-tg4g.make  swdrvr-tolt8g.make  (+20 more)
fastpath.cli/: Makefile  cli.install  cli.update  fp.cli-ag16ga.make  fp.cli-cxo160g.make  fp.cli-cxo640g-e500mc.make  fp.cli-cxp360g.make  fp.cli-ta48ge.make  fp.cli-tg16g.make  fp.cli-tg16gf.make  fp.cli-tg4g.make  fp.cli-tolt8g.make  fp.cli-tt04sxg.make  transfer_fw.sh
fastpath.cli/ipc/: pclib.c
fastpath.cli/main/: globals.h  main.c  main.h
fastpath.cli/utils/: crc.h  debug.h  semlib.h  tty.c  tty.h  utils.h
fastpath.shell/: Makefile  build_pq3.sh  fastpath.shell.vpj  fp.shell-ag16ga.make  fp.shell-common.make  fp.shell-cxo160g.make  fp.shell-cxo640g.make  fp.shell-cxp360g.make  fp.shell-olt1t0.make  fp.shell-olt1t0f.make  fp.shell-ta48ge.make  fp.shell-tolt8g.make  shell.install  shell.update  transfer_fw.sh
fastpath.shell/main/: globals.h  main.c  main.h
fastpath.shell/utils/: crc.c  debug.c  utils.c  utils.h
kernel/linux-2.6.12.3-PQ2-256M/: Module.symvers  kernelImage.z  kernel_patch_asantos.txt  makelog.txt
linux-2.6.38-rc5-denx/: .config  .config_as2  Makefile  Module.symvers  dtc  olt7_8ch.dts  xpto.diff
linux-2.6.38-rc5-denx/crypto/: eseqiv.c
linux-2.6.38-rc5-denx/drivers/: Makefile
linux-2.6.38-rc5-denx/fs/: Kconfig
linux-2.6.38-rc5-denx/init/: calibrate.c  main.c
linux-2.6.38-rc5-denx/kernel/: lockdep_internals.h  sched.c
linux-2.6.38-rc5-denx/scripts/: kallsyms
olt7-8ch/: run_firsttime.sh
olt7-8ch/PTIN_Notes/: add_config_msg.txt
olt7-8ch/RELEASE_610_FP_6.1.0.5-FastPath-Ent-esw-xgs3-bmw-LR-CSxw-IQH/: Makefile  build.sh  rbuild.sh
olt7-8ch/builds/: PTin_FASTPATH_ReleaseNotes.txt  copy_build.sh  mksetup2  publish_build.sh  setup_olt-8ch_fw_fastpath.sh  update.sh
olt7-8ch/fastpath.cli/: fastpath.cli.vpj
patch_files/: .gitignore  ag16ga.patch  fastpath_andl_hapi_esw_20130722.patch  sdk-5.9.4.patch  sdk-6.3.0_s3_20130718.patch
sdk-xgs-fastpath-6.3.7/broadcom/: README_SDK592  sdk_6.3.4.patch
src/: .gitignore  Fastpath_guide_style.txt  builds_olt360.tgz  create_package.new  create_package.sh
src/builds/: .gitignore  buildFpAllInOne  buildFpAllInOne_bg  env_vars.sh  fastpath-ag16ga.build  fastpath-cxo160g.build  fastpath-cxo160g.rootfs  fastpath-cxo2t2.build  fastpath-cxo2t2.rootfs  fastpath-cxo2t4.build  fastpath-cxo360g.build  fastpath-cxo640g.build  fastpath-olt.build  fastpath-olt1t0.build  fastpath-olt1t0.rootfs  fastpath-olt1t0f.build  fastpath-olt1t0f.rootfs  fastpath-olt1t1.build  fastpath-olt1t3.build  fastpath-olt2t2.build  fastpath-olt2t4.build  fastpath-olt360.build  fastpath-oltdnx.build  fastpath-ta12xg.build  fastpath-ta48ge.build  fastpath-tg16g.build  fastpath-tg16gf.build  fastpath-tg4g.build  fastpath-tolt8g.build  fastpath-tt08sxg.build  fastpath.backup  fastpath.build  fastpath.releasenotes  fastpath.rootfs  fp.debug  fp.releasenotes  mkboards_update.sh  readme.txt  readme_quickly.txt  startPcapBridge.sh  (+1 more)
src/fastpath.cli/: Makefile  cli.install  fp.cli-ae48ge.make  fp.cli-ag16ga.make  fp.cli-common.make  fp.cli-cxo160g.make  fp.cli-cxo640g-e500mc.make  fp.cli-cxo640g.make  fp.cli-cxp360g.make  fp.cli-olt1t0.make  fp.cli-olt1t0f.make  fp.cli-ta12xg.make  fp.cli-ta48ge.make  fp.cli-tc16sxg.make  fp.cli-tg16g.make  fp.cli-tg16gf.make  fp.cli-tg4g.make  fp.cli-tolt8g.make  fp.cli-tt04sxg.make  fp.cli-tt08sxg.make
src/fastpath.shell/: Makefile  fp.shell-ae48ge.make  fp.shell-ag16ga.make  fp.shell-common.make  fp.shell-cxo160g.make  fp.shell-cxo640g-e500mc.make  shell.install  (+14 more)
src/fastpath/src/application/switching/mgmd/: .gitignore  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure.ac  mgmd.pc.in
src/fastpath/src/application/switching/mgmd/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/fastpath/src/application/switching/mgmd/src/: .gitignore  Makefile.am  Makefile.in  avl.c  avl.h  avl_util.c  emulator.c  logger.c  logger.h  ptin_fifo_api.c  ptin_fifo_api.h  ptin_mgmd_api.c  ptin_mgmd_api.h  ptin_mgmd_avl.c  ptin_mgmd_avl.h  ptin_mgmd_avl_api.h  ptin_mgmd_avl_util.c  ptin_mgmd_cfg.c  ptin_mgmd_cfg.h  ptin_mgmd_cfg_api.c  ptin_mgmd_cfg_api.h  ptin_mgmd_cnfgr.c  ptin_mgmd_cnfgr.h  ptin_mgmd_core.c  ptin_mgmd_core.h  ptin_mgmd_ctrl.c  ptin_mgmd_ctrl.h  ptin_mgmd_db.c  ptin_mgmd_db.h  ptin_mgmd_defs.h.in  ptin_mgmd_eventqueue.c  ptin_mgmd_eventqueue.h  ptin_mgmd_features.h  ptin_mgmd_groupsourcespecifictimer.c  ptin_mgmd_groupsourcespecifictimer.h  ptin_mgmd_grouptimer.c  ptin_mgmd_grouptimer.h  ptin_mgmd_inet_defs.h  ptin_mgmd_logger.c  ptin_mgmd_logger.h  (+34 more)
(+130295 files in other folders)
